--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Particle Connect</string>
-    <string name="connect">Connect</string>
+    <string name="connect">Connect_V1</string>
+    <string name="connectKit">Connect_V2</string>
     <string name="disconnect">Disconnect</string>
     <string name="connected">Connected</string>
     <string name="signAndSendTransaction">signAndSendTransaction</string>
